--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
-MONGO_URI= mongodb+srv://dbAdmin:123qwe@facebook-clone-ijkqt.mongodb.net/test?retryWrites=true
+MONGO_URI= mongodb+srv://dbAdmin:123qwe@facebook-clone-ijkqt.mongodb.net/facebook?retryWrites=true
 PORT= 8080
 JWT_SECRET=KHKDLSHSKDHLS769860709709JHKGKHL
+
+
