--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.1",
     "morgan-body": "^2.4.5",
+    "nodemailer": "^6.1.1",
     "uuidv1": "^1.6.14"
   }
 }
