--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
@@ -25,6 +26,7 @@
     "morgan": "^1.9.1",
     "morgan-body": "^2.4.5",
     "nodemailer": "^6.1.1",
+    "uuid": "^3.3.2",
     "uuidv1": "^1.6.14"
   }
 }
