--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI= mongodb+srv://dbAdmin:123qwe@facebook-clone-ijkqt.mongodb.net/facebook?retryWrites=true
+MONGO_URI= mongodb://urvu6axd0iyporuldvpj:FU35cVVCTBCaL8U4tmUJ@bssob6fgsp32f6e-mongodb.services.clever-cloud.com:27017/bssob6fgsp32f6e
 PORT= 8080
 JWT_SECRET=KHKDLSHSKDHLS769860709709JHKGKHL
 
