--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI= mongodb://urvu6axd0iyporuldvpj:FU35cVVCTBCaL8U4tmUJ@bssob6fgsp32f6e-mongodb.services.clever-cloud.com:27017/bssob6fgsp32f6e
+MONGO_URI= mongodb://uoz8mcqirkcarficl6jh:OLalUii0uFZOK35vkCmz@bo5ghsadke6tshk-mongodb.services.clever-cloud.com:27017/bo5ghsadke6tshk
 PORT= 8080
 JWT_SECRET=KHKDLSHSKDHLS769860709709JHKGKHL
 
