--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "node-sass styles.scss styles.css"
+    "scss": "node-sass styles.scss styles.css",
+    "heroku-postbuild":"npm install --only=dev && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +31,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:8080",
+  "engines": {
+    "node": "11.2.0"
+}
 }
