--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI= mongodb+srv://dbAdmin:123qwe@facebook-clone-ijkqt.mongodb.net/facebook?retryWrites=true
+MONGODB_URI= mongodb://faceadmin:123qwe@ds261616.mlab.com:61616/heroku_76qz5nsg
 PORT= 8080
 JWT_SECRET=KHKDLSHSKDHLS769860709709JHKGKHL
 
