--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
+    "start": "cd server && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "node-sass styles.scss styles.css"
+    "scss": "node-sass styles.scss styles.css",
+    "heroku-postbuild":"npm install --only=dev && npm install && npm run build && npm start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +31,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:8080",
+  "engines": {
+    "node": "11.2.0"
+}
 }
