--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGODB_URI= mongodb://faceadmin:123qwe@ds261616.mlab.com:61616/heroku_76qz5nsg
-PORT= 8080
+PORT= '/'
 JWT_SECRET=KHKDLSHSKDHLS769860709709JHKGKHL
 
 
