--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "node-sass styles.scss styles.css"
+    "scss": "node-sass styles.scss styles.css",
+    "heroku-postbuild": "npm install && npm run build"
+
   },
   "eslintConfig": {
     "extends": "react-app"
