--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI= mongodb+srv://dbAdmin:123qwe@facebook-clone-ijkqt.mongodb.net/test?retryWrites=true
+MONGODB_URI= mongodb+srv://dbAdmin:123qwe@facebook-clone-ijkqt.mongodb.net/test?retryWrites=true
 PORT= 8080
 JWT_SECRET=KHKDLSHSKDHLS769860709709JHKGKHL
 
