--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start:dev": "react-scripts start",
-    "start": "cd server && node server.js",
+    "start": "cd server && npm install && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
