--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "scripts": {
     "start:dev": "react-scripts start",
-    "start": "cd server && npm install && node server.js",
+    "start": "cd server && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "scss": "node-sass styles.scss styles.css",
-    "heroku-postbuild": "npm install && npm run build && npm start"
+    
 
   },
   "eslintConfig": {
