--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "node-sass styles.scss styles.css",
+    "scss": "node-sass styles.scss styles.css"
     
 
   },
