--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "env-cmd": "^9.0.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.4",
     "mongoose-autopopulate": "^0.9.1",
@@ -17,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:staging": "env-cmd .env.staging npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "scss": "node-sass styles.scss styles.css"
