--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for facebook appliaction.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm install && node server.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
