--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "nodemailer": "^6.1.1",
     "uuid": "^3.3.2",
     "uuidv1": "^1.6.14"
-  }
+  },
+  "homepage" : "https://facebook-netcraft.herokuapp.com/"
 }
