--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "homepage" : "https://facebook-netcraft.herokuapp.com/"
   
 
 }
